<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.fragment.RegisterFragment">

    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:digits="@string/input_type_allowed_char_name"
        android:ems="10"
        android:hint="@string/fragment_register_edittext_name"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_reg_login"
        app:layout_constraintEnd_toEndOf="@+id/et_reg_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_reg_login" />

    <EditText
        android:id="@+id/et_reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:digits="@string/input_type_allowed_char_login"
        android:ems="10"
        android:hint="@string/fragment_register_edittext_login"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_reg_pass"
        app:layout_constraintEnd_toEndOf="@+id/et_reg_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_reg_pass" />

    <EditText
        android:id="@+id/et_reg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:digits="@string/input_type_allowed_char_password"
        android:ems="10"
        android:hint="@string/fragment_register_edittext_password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_reg_pass_confirm"
        app:layout_constraintEnd_toEndOf="@+id/et_reg_pass_confirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_reg_pass_confirm" />

    <EditText
        android:id="@+id/et_reg_pass_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:digits="@string/input_type_allowed_char_password"
        android:ems="10"
        android:hint="@string/fragment_register_edittext_confirm_password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_reg_confirm"
        app:layout_constraintEnd_toEndOf="@+id/bt_reg_confirm"
        app:layout_constraintStart_toStartOf="@+id/bt_reg_confirm" />

    <Button
        android:id="@+id/bt_reg_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_register_button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>